[gd_scene format=3 uid="uid://3e81xjs2ap81"]

[ext_resource type="Script" uid="uid://cgtsr1ve5ma3k" path="res://Scripts/menu.gd" id="1_s2c3o"]
[ext_resource type="Texture2D" uid="uid://cchw0nrt5a14n" path="res://Art Assets/backgrounds/bground.png" id="1_ylpcl"]
[ext_resource type="FontFile" uid="uid://ctac5wch5ukxl" path="res://Art Assets/VCR_OSD_MONO_1.001.ttf" id="2_cx167"]
[ext_resource type="Texture2D" uid="uid://buv67q5krfss" path="res://Art Assets/buttons/stonebutton.png" id="3_dolsu"]
[ext_resource type="Script" uid="uid://b4ssupmx0glwv" path="res://Scripts/settings.gd" id="5_ma218"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n4eug"]
texture = ExtResource("1_ylpcl")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dlksc"]
texture = ExtResource("3_dolsu")
texture_margin_left = 20.0
texture_margin_top = 10.0
texture_margin_right = 20.0
texture_margin_bottom = 15.0
region_rect = Rect2(67.177315, 53.123344, 185.42703, 73.555244)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_s2c3o"]
thickness = 5

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ma218"]
color = Color(1, 1, 1, 1)
thickness = 5

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s2c3o"]
texture = ExtResource("3_dolsu")
region_rect = Rect2(67.8661, 53.960724, 184.1995, 72.08902)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ma218"]
texture = ExtResource("3_dolsu")
region_rect = Rect2(67.8661, 53.960724, 184.1995, 72.08902)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_idohh"]
texture = ExtResource("3_dolsu")
region_rect = Rect2(67.8661, 53.960724, 184.1995, 72.08902)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wfhf6"]
texture = ExtResource("3_dolsu")
region_rect = Rect2(67.8661, 53.960724, 184.1995, 72.08902)

[node name="Control" type="Control" unique_id=414267829]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s2c3o")

[node name="Panel" type="Panel" parent="." unique_id=1256426135]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_n4eug")

[node name="Label" type="Label" parent="." unique_id=432790711]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -732.5
offset_top = -446.0
offset_right = 732.5
offset_bottom = -226.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/font = ExtResource("2_cx167")
theme_override_font_sizes/font_size = 230
text = "CODE ARENA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="." unique_id=1070981964]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -235.89844
offset_top = -41.0
offset_right = 235.89856
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Play" type="Button" parent="Buttons" unique_id=957738945]
layout_mode = 2
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_cx167")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxTexture_dlksc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dlksc")
theme_override_styles/hover = SubResource("StyleBoxTexture_dlksc")
theme_override_styles/disabled = SubResource("StyleBoxTexture_dlksc")
text = "PLAY"

[node name="Tutorial" type="Button" parent="Buttons" unique_id=697105417]
layout_mode = 2
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_cx167")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxTexture_dlksc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dlksc")
theme_override_styles/hover = SubResource("StyleBoxTexture_dlksc")
theme_override_styles/disabled = SubResource("StyleBoxTexture_dlksc")
text = "TUTORIAL"

[node name="Options" type="Button" parent="Buttons" unique_id=1958622706]
layout_mode = 2
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_cx167")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxTexture_dlksc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dlksc")
theme_override_styles/hover = SubResource("StyleBoxTexture_dlksc")
theme_override_styles/disabled = SubResource("StyleBoxTexture_dlksc")
text = "OPTIONS"

[node name="Options menu" type="Panel" parent="." unique_id=2011574564]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -319.0
offset_top = -213.0
offset_right = 319.0
offset_bottom = 425.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_ma218")

[node name="Label" type="Label" parent="Options menu" unique_id=386568389]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -102.5
offset_top = 10.0
offset_right = 102.5
offset_bottom = 54.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_cx167")
theme_override_font_sizes/font_size = 50
text = "OPTIONS"

[node name="X button" type="Button" parent="Options menu" unique_id=2004646762]
layout_mode = 0
offset_left = 600.0
offset_top = -20.0
offset_right = 660.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_cx167")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_dlksc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dlksc")
theme_override_styles/hover = SubResource("StyleBoxTexture_dlksc")
theme_override_styles/disabled = SubResource("StyleBoxTexture_dlksc")
text = "X"

[node name="Master volume" type="HSlider" parent="Options menu" unique_id=1051676259]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -286.0
offset_top = -173.0
offset_right = 70.0
offset_bottom = -152.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_s2c3o")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_ma218")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_ma218")
value = 100.0

[node name="Sfx volume" type="HSlider" parent="Options menu" unique_id=1193431649]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -286.0
offset_top = -109.0
offset_right = 70.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_s2c3o")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_ma218")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_ma218")
value = 100.0

[node name="Volume" type="Label" parent="Options menu" unique_id=890010545]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 79.0
offset_top = -176.0
offset_right = 307.0
offset_bottom = -149.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_cx167")
theme_override_font_sizes/font_size = 50
text = "VOLUME"
horizontal_alignment = 1

[node name="Sfx" type="Label" parent="Options menu" unique_id=1326779019]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 79.0
offset_top = -120.0
offset_right = 307.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_cx167")
theme_override_font_sizes/font_size = 50
text = "SFX"
horizontal_alignment = 1

[node name="NameEdit" type="LineEdit" parent="Options menu" unique_id=20314156]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = -55.0
offset_right = 207.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2

[node name="name" type="Label" parent="Options menu" unique_id=1141878887]
layout_mode = 0
offset_left = 96.0
offset_top = 266.0
offset_right = 213.0
offset_bottom = 302.0
theme_override_font_sizes/font_size = 40
text = "NAME:"

[node name="Error" type="Label" parent="Options menu" unique_id=1646467830]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = 3.0
offset_right = 88.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "ERROR"

[node name="Exit" type="Button" parent="." unique_id=709923818]
layout_mode = 0
offset_left = 1646.0
offset_top = 897.0
offset_right = 1791.0
offset_bottom = 967.0
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_cx167")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_s2c3o")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ma218")
theme_override_styles/hover = SubResource("StyleBoxTexture_idohh")
theme_override_styles/disabled = SubResource("StyleBoxTexture_wfhf6")
text = "EXIT"

[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/Tutorial" to="." method="_on_offline_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Options menu/X button" to="." method="_on_x_button_pressed"]
[connection signal="text_submitted" from="Options menu/NameEdit" to="Options menu" method="_on_name_edit_text_submitted"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
